--- a/ichrisbirch/app/static/sass/pages/_backups.scss
+++ b/ichrisbirch/app/static/sass/pages/_backups.scss
@@ -68,7 +68,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: var(--space-m);
-        align-items: flex-end;
+        align-items: center;
     }
 
     &__field {
